# academic-descent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  api.py
app/static/: app.js  styles.css
app/templates/: index.html
tests/: test_api.py
